--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <title>注册</title>
@@ -9,6 +9,7 @@
 <input  type="text" name="username" value="用户名">
 <input  type="password" name="password" value="输入密码">
 <input type="submit">提交注册</input>
+    <input type="reset">重置</input>
 </form>
 </body>
 
